[package]
name = "mdbook-curly-quotes"
version = "0.4.27"
authors = ["Armin Häberling <armin.aha@gmail.com>"]
edition = "2021"
keywords = ["mdbook", "markdown"]
license = "MPL-2.0"
readme = "README.md"
description = """mdBook preprocessor that replaces straight quotes with curly\
quotes, except within code blocks or code spans."""
repository = "https://github.com/arminha/mdbook-curly-quotes"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
mdbook = { version = "0.4.36", default-features = false }
pulldown-cmark = "0.10.0"
pulldown-cmark-to-cmark = "11.0.2"
semver = "1.0.21"
serde_json = "1.0.111"
