[package]
name = "mdbook-curly-quotes"
version = "0.4.52"
authors = ["Armin Häberling <armin.aha@gmail.com>"]
edition = "2021"
keywords = ["mdbook", "markdown"]
license = "MPL-2.0"
readme = "README.md"
description = """mdBook preprocessor that replaces straight quotes with curly\
quotes, except within code blocks or code spans."""
repository = "https://github.com/arminha/mdbook-curly-quotes"
rust-version = "1.82"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
clap = { version = "4.5.44", features = ["derive"] }
mdbook = { version = "0.4.52", default-features = false }
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"
semver = "1.0.26"
serde_json = "1.0.142"
